<resources>
    <string name="app_name">SqlLiteApplication</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="id">Id</string>
    <string name="update">UPDATE</string>
    <string name="view">VIEW</string>
    <string name="delete">DELETE</string>
    <string name="save">SAVE</string>
    <!--<string name="enter_your_id">Enter Your Id</string>-->
    <!--<string name="enter_first_name">Enter First Name</string>-->
    <!--<string name="enter_last_name">Enter Last Name</string>-->
</resources>
