<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="8dp"
        tools:context=".MainActivity">
    <TableLayout android:layout_width="match_parent"
                 android:layout_height="wrap_content">


<TableRow>
    <TextView
            android:text="@string/id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="70dp"
            tools:layout_editor_absoluteX="49dp" android:id="@+id/textView" />
    <EditText
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            tools:layout_editor_absoluteY="53dp" tools:layout_editor_absoluteX="145dp"
            android:id="@+id/personid"/>
</TableRow>

        <TableRow>
    <TextView
            android:text="@string/first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="142dp"
            tools:layout_editor_absoluteX="49dp" android:id="@+id/textView2" />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            tools:layout_editor_absoluteY="123dp" tools:layout_editor_absoluteX="145dp"
            android:id="@+id/firstname"/>
        </TableRow>
        <TableRow>
    <TextView
            android:text="@string/last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="204dp"
            tools:layout_editor_absoluteX="49dp" android:id="@+id/textView3" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            tools:layout_editor_absoluteY="204dp" tools:layout_editor_absoluteX="145dp"
            android:id="@+id/lastname"/>


</TableRow>
    </TableLayout>
  <LinearLayout android:layout_width="wrap_content"
                android:layout_height="wrap_content"
  android:layout_marginTop="20sp">

      <ListView
              android:id="@+id/listview"
              android:layout_width="wrap_content"
                android:layout_height="250sp">

      </ListView>


  </LinearLayout>
    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
    android:layout_marginTop="40sp"
    android:orientation="horizontal"
    android:layout_gravity="center">


    <Button
            android:text="@string/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="667dp"
            tools:layout_editor_absoluteX="7dp"
            android:id="@+id/updaterecord"/>
    <Button
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="666dp"
            tools:layout_editor_absoluteX="108dp"
            android:id="@+id/saverecord" />
    <Button
            android:text="@string/view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="667dp"
            tools:layout_editor_absoluteX="205dp"
            android:id="@+id/viewrecord" />
    <Button
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="666dp"
            tools:layout_editor_absoluteX="307dp"
            android:id="@+id/deleterecord"/>

    </LinearLayout>
</LinearLayout>